--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "edudata/asgi.py",
+      "src": "datadashboard/asgi.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "edudata/asgi.py"
+      "dest": "datadashboard/asgi.py"
     }
   ]
 }
